# vortex-image-filtering

./: .gitignore  .pre-commit-config-local.yaml  .pre-commit-config.yaml  README.md  codecov.yml
.github/workflows/: code-coverage.yml  industrial-ci.yml  pre-commit.yml
image-filtering/: CMakeLists.txt  image_processing.hpp  package.xml
image-filtering/config/: image_filtering_params.yaml
image-filtering/include/image_filtering/lib/: typedef.hpp  utilities.hpp
image-filtering/include/image_filtering/lib/filters/: abstract_filter_class.hpp  all_filters.hpp  binary_threshold.hpp  dilation.hpp  ebus.hpp  erosion.hpp  flip.hpp  median_binary.hpp  no_filter.hpp  otsu.hpp  overlap.hpp  remove_grid.hpp  sharpening.hpp  temporal_noise.hpp  unsharpening.hpp  white_balancing.hpp
image-filtering/include/image_filtering/ros/: image_filtering_ros.hpp
image-filtering/include/image_filters/: image_filtering_ros.hpp  image_filtering_ros_utils.hpp  image_processing.hpp  typedef.hpp  utilities.hpp  utils.hpp
image-filtering/include/image_filters/filters/: abstract_filter_class.hpp  all_filters.hpp  example.hpp  no_filter.hpp
image-filtering/include/lib/: typedef.hpp  utilities.hpp
image-filtering/include/lib/filters/: abstract_filter_class.hpp  all_filters.hpp  binary_threshold.hpp  dilation.hpp  ebus.hpp  erosion.hpp  example.hpp  flip.hpp  median_binary.hpp  no_filter.hpp  otsu.hpp  overlap.hpp  sharpening.hpp  unsharpening.hpp  white_balancing.hpp
image-filtering/include/ros/: image_filtering_ros.hpp  image_filtering_ros_utils.hpp
image-filtering/launch/: image_filtering.launch.py  image_filtering_launch.py
image-filtering/log/: latest_list
image-filtering/params/: image_filtering_params.yaml
image-filtering/src/: image_filtering_node.cpp  image_filtering_ros.cpp  image_filtering_ros_utils.cpp  image_processing.cpp  utilities.cpp  utils.cpp
image-filtering/src/filters/: example.cpp
image-filtering/src/lib/: utilities.cpp
image-filtering/src/lib/filters/: example.cpp
image-filtering/src/ros/: image_filtering_ros.cpp  image_filtering_ros_utils.cpp
image-filtering/test/: CMakeLists.txt
log/: latest_list
